tests/errors/std-vec-metadata-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let vec = std::vec::new<i64>(ref mut zone, 2);
  zone::reset(ref mut zone);
  let value = vec.len();
  zone::destroy(zone);
  return value;
}
